--- a/newtab.html
+++ b/newtab.html
@@ -1,3 +1,7 @@
 <title>&lrm;</title>
-<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-<style>body { background-color: white }</style>
+<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+<style>
+  body {
+    background-color: white;
+  }
+</style>
